--- a/package.json
+++ b/package.json
@@ -3,7 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
+    "@hapi/boom": "^10.0.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "serverless-http": "^3.1.1"
+    "joi": "^17.12.2",
+    "serverless-http": "^3.1.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "serverless-dynamodb": "^0.2.50",
+    "serverless-offline": "^13.3.3"
   }
 }
