--- a/serverless.yml
+++ b/serverless.yml
@@ -2,7 +2,13 @@ service: feria
 frameworkVersion: '3'
 
 custom:
-  tableName: 'users-table-${sls:stage}'
+  tableNames: 
+    emprendesTable: 'emprende-table-feria-${sls:stage}'
+  dynamodb:
+    start:
+      migrate: true
+    stages:
+      - dev
 
 provider:
   name: aws
@@ -19,9 +25,9 @@ provider:
             - dynamodb:UpdateItem
             - dynamodb:DeleteItem
           Resource:
-            - Fn::GetAtt: [ UsersTable, Arn ]
+            - Fn::GetAtt: [ EmprendesFeriaTable, Arn ]
   environment:
-    USERS_TABLE: ${self:custom.tableName}
+    EMPRENDE_FERIA_TABLE: ${self:custom.tableNames.emprendesTable}
 
 functions:
   api:
@@ -31,14 +37,18 @@ functions:
 
 resources:
   Resources:
-    UsersTable:
+    EmprendesFeriaTable:
       Type: AWS::DynamoDB::Table
       Properties:
         AttributeDefinitions:
-          - AttributeName: userId
+          - AttributeName: emprendeId
             AttributeType: S
         KeySchema:
-          - AttributeName: userId
+          - AttributeName: emprendeId
             KeyType: HASH
         BillingMode: PAY_PER_REQUEST
-        TableName: ${self:custom.tableName}
+        TableName: ${self:custom.tableNames.emprendesTable}
+
+plugins:
+  - serverless-offline
+  - serverless-dynamodb
